初步完成域名转发